[feature] added video jumbotron

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset='UTF-8'>
   <link rel='stylesheet' href='./node_modules/bootstrap/dist/css/bootstrap.css'>
+  <link rel='stylesheet' href='./style/style.css'>
   <title>LivenUp</title>
 </head>
 <body>
