--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,12 @@
 <html lang='en'>
 <head>
   <meta charset='UTF-8'>
-  <link rel='stylesheet' href='./style/bootstrap.css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <link rel='stylesheet' href='./style/style.css'>
   <title>LivenUp</title>
 </head>
 <body>
-  <div class='container-fluid'></div>
+  <div class='root'></div>
 </body>
 <script src='./bundle.js'></script>
 </html>
