--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset='UTF-8'>
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link rel='stylesheet' type='text/css' href='./style/semantic.css'>
   <link rel='stylesheet' href='./style/style.css'>
   <title>LivenUp</title>
 </head>
