--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html lang='en'>
 <head>
   <meta charset='UTF-8'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel='stylesheet' type='text/css' href='./style/semantic.css'>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
