[chore] prepare for deploy

--- a/client/index.html
+++ b/client/index.html
@@ -10,8 +10,11 @@
   <script defer src="https://code.getmdl.io/1.1.1/material.min.js"></script>
   <link rel='stylesheet' href='./style/style.css'>
   <title>LivenUp</title>
+  <style>
+  body {background-color:#c8e6c9;}
+  </style>
 </head>
-<body>
+<body bgcolor="">
   <div class='root'></div>
 </body>
 <script src='./bundle.js'></script>
